# jetbrains-plugin-downloader

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  config_docker.json  example_config.json  pyproject.toml  setup.cfg
.github/workflows/: docker-build.yml  main.yml
src/idea_plugin_downloader/: __main__.py  downloader.py
