[metadata]
name = idea_plugin_downloader
description = Mirror jetbrains plugins for offline environments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/janLo/jetbrains-plugin-downloader
author = Jan Losinski
author_email = losinski.j@gmail.com
license = BSD
version = 0.0.1

[options]
packages = find:
install_requires =
    click
    lxml
    pydantic
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.entry_points]
console_scripts =
    idea_plugin_downloader = idea_plugin_downloader.downloader:main

[options.packages.find]
where = src
